--- a/src/main/webapp/script/subComponente/List.xhtml
+++ b/src/main/webapp/script/subComponente/List.xhtml
@@ -23,16 +23,21 @@
             <!-- page-header -->
             <div class="page-header">
                 <div class="row">
-                    <div class="col-sm-10 col-xs-10">
+                    <div class="col-sm-6 col-xs-12">
                         <h1><i class="fa fa-cubes page-header-icon"></i>&nbsp;&nbsp;<p:outputLabel value="Listado de #{applicationBean.productSubComponentDescription}(s)"></p:outputLabel></h1>
                         <p:commandLink title="Help" onclick="PF('helpDialog').show()" styleClass="text-info" >
                             <i class="fa fa-info-circle"/>
                         </p:commandLink> 
                     </div>
-                    <div class="col-sm-2 col-xs-2">
+                    <div class="col-sm-6 col-xs-12">
                         <h:form>
 
-                            <div class="btn-group pull-right">
+                            <div class="pull-right">
+                                <div class="btn-group">
+                                    <go:paginatorCounts controllerMBean="#{subComponenteController}"/>
+                                </div>
+
+                                <go:paginatorBtnsBt controllerMBean="#{subComponenteController}" update="@(form)"/>
                                 <button type="button" class="btn dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars"></i></button>
                                 <ul class="dropdown-menu">
                                     <li>
@@ -67,124 +72,88 @@
                                        update=":mainform:messages :form0"
                                        vistaControllerBackOutcome="/script/subComponente/List"/>
 
-                        <h:panelGroup layout="block" styleClass="row alert alert-page alert-warning" rendered="#{subComponenteController.items.rowCount le 0}">
-                            <button type="button" class="close" data-dismiss="alert">x</button>
-                            Su busqueda no coincide con ningun Sub componente.
-                        </h:panelGroup>
-                    </h:form>
 
-                    <h:form id="form0">
-                        <p:messages globalOnly="true"/>
-                        <h:panelGroup layout="block" styleClass="panel panel-transparent" rendered="#{subComponenteController.items.rowCount gt 0}">
-                            <div class="panel-heading">
-                                <span class="panel-title"> 
-                                    <go:paginatorCounts controllerMBean="#{subComponenteController}"/>
-                                </span>
-
-                                <div class="panel-heading-controls">
-                                    <go:paginatorBtnsBt controllerMBean="#{subComponenteController}" update=":form"/>
-                                </div>
-                            </div>
-
-                            <div class="panel-body no-padding">
-                                <div class="table-responsive">
-                                    <h:dataTable id="panelG1" value="#{subComponenteController.items}" 
-                                                 styleClass="table table-hover"
-                                                 var="item">
-                                        <h:column >
-                                            <f:facet name="header">
-                                                <h:outputText value="Código"/>
-                                            </f:facet>
-                                            <h:outputText value="#{item.idSubComponente}"/>
-                                        </h:column>
-                                        
-                                        <h:column >
-                                            <f:facet name="header">
-                                                <h:outputText value="Nombre"/>
-                                            </f:facet>
-                                            <h:outputText value="#{item.nombre}"/>
-                                        </h:column>
-
-                                        <h:column >
-                                            <f:facet name="header">
-                                                <h:outputText value="descripción"/>
-                                            </f:facet>
-                                            <h:outputText value="#{item.descripcion}"/>
-                                        </h:column>
-
-                                        <h:column >
-                                            <f:facet name="header">
-                                                <h:outputText value="modelo"/>
-                                            </f:facet>
-                                            <h:outputText value="#{item.modelo}"/>
-                                        </h:column>
-
-                                        <h:column >
-                                            <f:facet name="header">
-                                                <h:outputText value="#{applicationBean.productComponentDescription}"/>
-                                            </f:facet>
-                                            <h:outputText value="#{item.idComponente}"/>
-                                        </h:column>
-
-                                        <h:column >
-                                            <f:facet name="header">
-                                                <h:outputText value="#{applicationBean.productDescription}"/>
-                                            </f:facet>
-                                            <h:outputText value="#{item.idProducto}"/>
-                                        </h:column>
-
-                                        <h:column >
-                                            <f:facet name="header">
-                                                <h:outputText value="productoContratadoList"/>
-                                            </f:facet>
-                                            <h:outputText rendered="#{item.productoContratadoList.size() gt 0}" value="#{item.productoContratadoList}"/>
-                                        </h:column>
-
-                                        <h:column>
-                                            <f:facet name="header">
-                                                <h:outputText value="Acción"/>
-                                            </f:facet>
-                                            <div class="btn-toolbar">
-
-                                                <p:commandLink id="viewBtn" action="#{subComponenteController.prepareView(item)}" title="Ver" ajax="false"
-                                                               styleClass="btn btn-sm btn-outline btn-primary"
-                                                               >
-                                                    <i class="fa fa-eye"/>
-                                                </p:commandLink>
-
-                                                <p:commandLink id="editBtn" action="#{subComponenteController.prepareEdit(item)}" title="Editar" ajax="false" 
-                                                               styleClass="btn btn-sm btn-outline btn-primary"
-                                                               rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}">
-                                                    <i class="fa fa-edit"/>
-                                                </p:commandLink>
-
-                                                <p:commandLink  id="showDialogButton" 
-                                                                actionListener="#{subComponenteController.setSelected(item)}"
-                                                                rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"
-                                                                styleClass="btn btn-sm btn-outline btn-danger"
-                                                                title="Eliminar"
-                                                                oncomplete="PF('confirmation').show()"
-                                                                update=":confirmDialog">
-                                                    <i class="fa fa-times"/>
-
-                                                </p:commandLink>
-                                            </div>
-                                        </h:column>
-
-                                    </h:dataTable>
-                                </div>
-                            </div>
-
-                            <div class="panel-footer">
-                                <div class="row text-center">
-                                    <go:paginatorCounts controllerMBean="#{subComponenteController}"/>
-                                </div>
-                            </div>
-
-                        </h:panelGroup>
                     </h:form>
                 </div>
             </div>
+            <div class="row">
+                <h:form id="form0">
+                    <h:panelGroup layout="block" styleClass="row alert alert-page alert-warning" rendered="#{subComponenteController.items.rowCount le 0}">
+                        <button type="button" class="close" data-dismiss="alert">x</button>
+                        Su busqueda no coincide con ningun Sub componente.
+                    </h:panelGroup>
+                    <h:panelGroup layout="block" styleClass="panel panel-transparent" rendered="#{subComponenteController.items.rowCount gt 0}">
+
+
+                        <p:dataTable widgetVar="dataTable" var="item" value="#{subComponenteController.items}" selectionMode="single"
+                                     emptyMessage="#{bundle.emptyList}">
+
+                            <p:column headerText="Código" sortBy="#{item.idSubComponente}">
+                                <h:outputText value="#{item.idSubComponente}" />
+                            </p:column>
+
+                            <p:column headerText="Nombre" sortBy="#{item.nombre}">
+                                <h:outputText value="#{item.nombre}"/>
+                            </p:column>
+
+                            <p:column headerText="descripción" sortBy="#{item.descripcion}">
+                                <h:outputText value="#{item.descripcion}"/>
+                            </p:column>
+
+                            <p:column headerText="modelo">
+                                <h:outputText value="#{item.modelo}"/>
+                            </p:column>
+
+                            <p:column headerText="#{applicationBean.productComponentDescription}">
+                                <h:outputText value="#{item.idComponente}"/>
+                            </p:column>
+
+                            <p:column headerText="#{applicationBean.productDescription}">
+                                <h:outputText value="#{item.idProducto}"/>
+                            </p:column>
+
+                            <p:column headerText="productoContratadoList">
+                                <h:outputText rendered="#{item.productoContratadoList.size() gt 0}" value="#{item.productoContratadoList}"/>
+                            </p:column>
+
+                            <p:column headerText="Acción">
+                                <div class="btn-toolbar">
+
+                                    <!--<p:commandLink id="viewBtn" action="#{subComponenteController.prepareView(item)}" title="Ver" ajax="false"
+                                                   styleClass="btn btn-sm btn-outline btn-primary"
+                                                   >
+                                        <i class="fa fa-eye"/>
+                                    </p:commandLink> -->
+
+                                    <p:commandLink id="editBtn" action="#{subComponenteController.prepareEdit(item)}" title="Editar" ajax="false" 
+                                                   styleClass="btn btn-sm btn-outline btn-primary"
+                                                   rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}">
+                                        <i class="fa fa-edit"/>
+                                    </p:commandLink>
+
+                                    <p:commandLink  id="showDialogButton" 
+                                                    actionListener="#{subComponenteController.setSelected(item)}"
+                                                    rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"
+                                                    styleClass="btn btn-sm btn-outline btn-danger"
+                                                    title="Eliminar"
+                                                    oncomplete="PF('confirmation').show()"
+                                                    update=":confirmDialog">
+                                        <i class="fa fa-times"/>
+
+                                    </p:commandLink>
+                                </div>
+                            </p:column>
+                        </p:dataTable>
+                        <div class="panel-footer">
+                            <div class="row text-center">
+                                <go:paginatorCounts controllerMBean="#{subComponenteController}"/>
+                            </div>
+                        </div>
+
+                    </h:panelGroup>
+                </h:form>
+            </div>
+
         </ui:define>
         <ui:define name="dialogs">
 
@@ -195,12 +164,12 @@
             </p:confirmDialog>
 
             <p:dialog id="confirmDialog" showEffect="fade" hideEffect="clip" modal="true"
-                      header="Iniciando proceso de eliminación" widgetVar="confirmation">
+                      header="Eliminar" widgetVar="confirmation">
                 <h:form id="formDelete">
-                    <h:outputText value="Está seguro de eliminar el Sub componente #{subComponenteController.selected.nombre}?"/>
-                    <p:commandButton id="confirm" value="Si, Eliminar" actionListener="#{subComponenteController.destroy()}" action="/script/pagina"
-                                     update=":form0" oncomplete="PF('confirmation').hide()"/>
-                    <p:commandButton id="decline" value="No, Cancelar" onclick="PF('confirmation').hide()" type="button" /> 
+                    <h:outputText value="Está seguro de eliminar el Sub componente #{subComponenteController.selected.nombre}?"/><br/><br/>
+                    <p:commandLink styleClass="btn btn-primary btn-flat" id="confirm" value="Si, Eliminar" actionListener="#{subComponenteController.destroy()}" action="/script/pagina"
+                                   update=":form0" oncomplete="PF('confirmation').hide()"/>&nbsp;&nbsp;
+                    <p:commandLink styleClass="btn btn-default btn-flat" id="decline" value="No, Cancelar" onclick="PF('confirmation').hide()" type="button" /> 
 
                 </h:form>
             </p:dialog>
